<resources>
    <string name="app_name">AndroidDemo</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="camera_msg">Hello, Camera.</string>
    <string name="button_camera">Camera</string>
    <string name="button_camera_preview">Camera preview</string>
    <string name="colin_button">My Man Camera preview</string>
    <string name="article_button">Article Button</string>
    <string name="button_takephoto">Take photo</string>
    <string name="button_loadphoto">Load photo</string>
    <string name="button_preview_capture">Capture</string>
    <string name="preview_desc">Camera preview description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="picture">Picture</string>
    <string name="intro_message">Camera preview demo</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_classifier">ClassifierActivity</string>
</resources>
